# fastai_experiments

./: .envrc  .gitignore  Dockerfile  create_instance.sh  pyproject.toml
fastai-video-browser/: package-lock.json
nbs/dl1/: lesson1-exercises.ipynb  lesson1-pets.ipynb
nbs/dl1/.ipynb_checkpoints/: lesson1-exercises-checkpoint.ipynb  lesson1-pets-checkpoint.ipynb
