[tool.poetry]
name = "fastai_experiments"
version = "0.1.0"
description = ""
authors = ["Armand Adroher <aadroher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastai = "^1.0.61"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
